# MyCollection

./: .gitignore  Readme.md
src/: CMakeLists.txt  Test.cpp
src/MyPrintLibrary/: CMakeLists.txt  PrettyPrinting.cpp
src/MyPrintLibrary/includes/: PrettyPrinting.hpp
src/includes/: MyCollection.hpp
